# game-gym

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  meson.build  meson.options  project.ggym
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
app/: main.cpp  meson.build
assets/models/: cube.gltf  start-pyramid.gltf
assets/scripts/: example.ts  spin.ts
docs/superpowers/plans/: 2026-04-06-gizmo-drag-interaction.md  2026-04-07-gpu-particle-physics.md
docs/superpowers/specs/: 2026-04-06-gizmo-drag-interaction-design.md  2026-04-07-gpu-particle-physics-design.md
engine/: meson.build
engine/assets/: asset_paths.cpp  asset_paths.h
engine/compute/: compute_pipeline.cpp  compute_pipeline.h  gpu_buffer.cpp  gpu_buffer.h  particle_system.cpp  particle_system.h
engine/core/: engine.cpp  engine.h  window.cpp  window.h
engine/ecs/: component_registry.h  components.h  systems.cpp  systems.h  world.cpp  world.h
engine/editor/: editor_ui.cpp  editor_ui.h  gizmo_interaction.cpp  gizmo_interaction.h
engine/math/: mat4.h  ray.cpp  ray.h  vec3.cpp  vec3.h
engine/mcp/: mcp_server.cpp  mcp_server.h  mcp_sse_transport.cpp  mcp_sse_transport.h  mcp_stdio_transport.cpp  mcp_stdio_transport.h  mcp_tools.cpp  mcp_tools.h  mcp_transport.h
engine/physics/: physics_components.h  physics_layers.cpp  physics_layers.h  physics_world.cpp  physics_world.h
engine/project/: project_config.cpp  project_config.h
engine/renderer/: camera.cpp  camera.h  gizmo_constants.h  gizmo_renderer.cpp  gizmo_renderer.h  gltf_loader.cpp  gltf_loader.h  gpu_context.cpp  gpu_context.h  grid_renderer.cpp  grid_renderer.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  renderer.cpp  renderer.h  shader_utils.cpp  shader_utils.h
engine/scene/: scene_format.cpp  scene_format.h  scene_loader.cpp  scene_loader.h  scene_serializer.cpp  scene_serializer.h
engine/script/: file_watcher.h  file_watcher_linux.cpp  file_watcher_macos.cpp  script_bindings.cpp  script_bindings.h  script_engine.cpp  script_engine.h  script_manager.cpp  script_manager.h  script_types.h  script_types_manual.h  scriptable.h
engine/version/: version_info.h
scenes/: cube-test.scene.json  start.scene.json
scripts/: check_coverage.py  codegen.py  coverage-threshold.json  create_release_tag.sh  install-git-hooks.sh  render_coverage_comment.py  requirements-coverage.txt  setup-imgui.sh  setup-v8.sh  setup-wgpu.sh  versioning.py
shaders/: gizmo.wgsl  grid.wgsl  mesh.wgsl  particle_collide.wgsl  particle_grid_build.wgsl  particle_integrate.wgsl  particle_sim.wgsl  triangle.wgsl
subprojects/: flecs.wrap  glfw.wrap  gtest.wrap  jolt.wrap
subprojects/packagefiles/jolt/: CMakeLists.txt
tests/: meson.build  test_asset_paths.cpp  test_camera.cpp  test_codegen.py  test_component_registry.cpp  test_compute.cpp  test_coverage_comment.py  test_coverage_gate.py  test_ecs.cpp  test_editor.cpp  test_gizmo_interaction.cpp  test_gltf_loader.cpp  test_gpu_context.cpp  test_gpu_particle.cpp  test_mat4.cpp  test_mat4_inverse.cpp  test_mcp.cpp  test_mcp_sse.cpp  test_mesh.cpp  test_physics.cpp  test_project_config.cpp  test_ray.cpp  test_scene_loader.cpp  test_scene_serializer.cpp  test_script_bindings.cpp  test_script_engine.cpp  test_script_integration.cpp  test_script_manager.cpp  test_script_types.cpp  test_shader_utils.cpp  test_vec3.cpp  test_version_info.cpp  test_versioning.py  test_window.cpp  test_window_input.cpp
typings/: engine.d.ts  tsconfig.json
